// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdToJsx documentation example 1`] = `
"<div>
  <h1>Title</h1>
  <p>
    {\\" \\"}Here is some <strong>markdown</strong>. So <em>easy</em> to write.
    You can interpolate JS expressions like {data.number}
    or {dogs.map(d => d.name).join(\\", \\")}.
    You can also interpolate JSX elements,
    whether <span>inline</span> or as a block:
  </p>
  <div className=\\"fancy-class\\">
    This is a block.
  </div>
  <p>
    {\\" \\"}You can even break up JSX interpolation to process more or your text
    as Markdown.
  </p>
  <div className=\\"fancy-class\\">
    <p>
      {\\" \\"}This is a <strong>Markdown</strong> paragraph inside the div.
      And this is another.
    </p>
  </div>
</div>;
"
`;

exports[`mdToJsx expression inside a link url 1`] = `
"<div>
  <p>Go to <a href=\\"/the/place/\\">the place</a></p>
  <p>Go to <a href={\`\${thePlaceUrl}\`}>the place</a></p>
  <p>Go to <a href={\`/the/\${placeUrl}\`}>the place</a></p>
  <p>Go to <a href={\`\${theUrl}/place\`}>the place</a></p>
</div>;
"
`;

exports[`mdToJsx expression inside a src url 1`] = `
"<div>
  <p><img src=\\"/the/img.jpg\\" alt=\\"The image\\" /></p>
  <p><img src={\`\${theImgUrl}.jpg\`} alt=\\"The image\\" /></p>
  <p><img src={\`/the/\${imgUrl}\`} alt=\\"The image\\" /></p>
  <p><img src={\`\${theUrl}/img.jpg\`} alt=\\"The image\\" /></p>
</div>;
"
`;

exports[`mdToJsx with alternative delimiters 1`] = `
"<div>
  <p>
    This time there's {adjective} new delimiters.
  </p>
  <div style={{ margin: 70 }}>
    Did this work?
  </div>
</div>;
"
`;

exports[`mdToJsx with broken-up nested JSX 1`] = `
"<div>
  <p>
    This is a paragraph{\\" \\"}
    <span className=\\"foo\\">with a <strong>markdown</strong> span inside</span>
  </p>
  <div style={{ margin: 70 }}>
    <p>
      {\\" \\"}And here is a paragraph inside a div.
      <a href=\\"/some/url\\">Link</a>
    </p>
  </div>
</div>;
"
`;

exports[`mdToJsx with built-in Prism highlighting 1`] = `
"<div>
  <p>Here is a block of code</p>
  <pre>
    <code className=\\"language-javascript\\">
      <span className=\\"token keyword\\">const</span> obj{\\" \\"}
      <span className=\\"token operator\\">=</span>{\\" \\"}
      <span className=\\"token punctuation\\">{\\"{\\"}</span>{\\"\\\\n\\"}{\\"  \\"}thing<span className=\\"token punctuation\\">:</span>{\\" \\"}
      <span className=\\"token number\\">1</span>
      <span className=\\"token punctuation\\">,</span>{\\"\\\\n\\"}{\\"  \\"}thing<span className=\\"token punctuation\\">:</span>{\\" \\"}
      <span className=\\"token string\\">'two'</span>{\\"\\\\n\\"}
      <span className=\\"token punctuation\\">{\\"}\\"}</span>
      <span className=\\"token punctuation\\">;</span>{\\"\\\\n\\"}
    </code>
  </pre>
</div>;
"
`;

exports[`mdToJsx with nested JSX 1`] = `
"<div>
  <p>This is a paragraph <span className=\\"foo\\">with a span inside</span></p>
  <div style={{ margin: 70 }}>
    And here is a div.
  </div>
</div>;
"
`;

exports[`mdToJsx with simple expression 1`] = `
"<div>
  <h1>Title</h1>
  <p>And a <strong>special</strong>: {number}, {twice}.</p>
</div>;
"
`;
